# TVM-linker

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile_src  Jenkinsfile  Makefile  README.md  build.rs  deps_map.json  find-dup.py  gzip.js  pathFix.js  prerequesites.sh  test_suite.py  tonVersion.js
.github/workflows/: qa.yml  release.yml
TestSuite4/: README.md
src/: abi.rs  keyman.rs  lib.rs  main.rs  methdict.rs  parser.rs  printer.rs  program.rs  resolver.rs  testcall.rs
src/disasm/: codedict.rs  commands.rs  fmt.rs  handlers.rs  loader.rs  mod.rs  tests.rs  types.rs
tests/: Wallet.code  Wallet.map.json  bss_test1.s  compile_all.sh  data.tvc  event.code  event.sol  get-version1.code  get-version2.code  get-version3.code  key1  key2  key2.pub  mycode.abi.json  mycode.code  test.rs  test_arrays.abi.json  test_arrays.code  test_call1.abi.json  test_call1.code  test_call1.sol  test_compute.code  test_compute_nested.code  test_extlink_lib.tvm  test_extlink_source.s  test_macros.code  test_public.abi.json  test_public.code  test_recursive.code  test_stdlib_sol.tvm  testlib1.tvm  testlib2.tvm
tests/disasm/: 000.b64  003.b64  004.b64  006.b64  008.b64  009.b64  011.b64  017.b64  018.b64  019.b64  020.b64  022.b64  025.b64  029.b64  032.b64  034.b64  035.b64  039.b64  040.b64  041.b64  042.b64  045.b64  050.b64  053.b64  054.b64  055.b64  056.b64  057.b64  058.b64  062.b64  064.b64  065.b64  066.b64  069.b64  070.b64  072.b64  073.b64  074.b64  079.b64  082.b64  (+80 more)
tests/disasm/tonix-ea2f96c/: Repo.cs  alias.cs  basename.cs  builtin.cs  cat.cs  cd.cs  colrm.cs  column.cs  command.cs  compgen.cs  complete.cs  cp.cs  cut.cs  declare.cs  df.cs  dirname.cs  dirs.cs  du.cs  dumpe2fs.cs  echo.cs  eilish.cs  enable.cs  env.cs  exec.cs  expand.cs  export.cs  file.cs  findmnt.cs  finger.cs  fsck.cs  fuser.cs  getent.cs  getopts.cs  grep.cs  groupadd.cs  groupdel.cs  groupmod.cs  groups.cs  hash.cs  head.cs  (+65 more)
ton-labs-tools/: Cargo.toml
tonlabs-cli/: Cargo.toml  Garant100.abi  README.md
tonlabs-cli/src/: account.rs  call.rs  config.rs  crypto.rs  deploy.rs  genaddr.rs  helpers.rs  main.rs
tonlabs-cli/tests/: cli.rs  data.abi.json  data.sol  data.tvc
tonlabs-cli/tests/samples/: wallet.keys.json
tvm-tools/: Cargo.toml
tvm-tools/src/: lib.rs  repository.rs
tvm_linker/: .gitignore  Cargo.toml  Makefile  deployer.py  key3  key3.pub  stdlib.code  stdlib.tvm  stdlib_arg.tvm  stdlib_c.tvm  stdlib_sol.tvm  stdlib_sol0.tvm  test.tvm  test_suite.py
tvm_linker/src/: abi.rs  debug_info.rs  disasm.rs  initdata.rs  keyman.rs  main.rs  methdict.rs  parser.rs  printer.rs  program.rs  real_ton.rs  resolver.rs  stdlib.rs  test_framework.rs  testcall.rs
tvm_linker/src/disasm/: disasm.rs  handlers.rs  loader.rs  mod.rs  tests.rs  types.rs
tvm_linker/tests/: Wallet.abi.json  Wallet.code  Wallet.sol  abi.abi  abi.code  accepting-message.code  asci_test1.s  comm-test.s  comm_test1.s  comm_test2.s  deg.s  event.abi.json  event.code  get-version2.code  hello.code  key1.pub  local_global_var.code  new-wallet-2.code  pbank.s  piggy.abi  piggybank.abi.json  piggybank.code  readme.md  readme.txt  savemsg.code  sc.a.code  sign-test.s  simple-contract-3-pushcont.code  simple-contract-3.code  simple-contract-4.code  sort-dict.code  sum-global-array.s  test-dict.code  test-dict.output  test.rs  test.tvm  test2.tvm  test20.abi.json  test20.code  test20.sol  (+63 more)
tvm_linker/tests/disasm/: 002.b64  005.b64  007.b64  012.b64  013.b64  023.b64  031.b64  043.b64  049.b64  051.b64  071.b64  075.b64  076.b64  078.b64  080.b64  081.b64  086.b64  089.b64  094.b64  095.b64  104.b64  105.b64  121.b64  125.b64  204.b64  210.b64  216.b64  224.b64  237.b64  244.b64  245.b64  261.b64  276.b64  291.b64  297.b64  304.b64  305.b64  309.b64  311.b64  315.b64
tvm_linker/tests_sol/: compile.sh  compile_all.sh  contract01.abi.json  contract01.code  contract02-a.abi.json  contract02-a.code  contract02-a.sol  contract02-b.abi.json  contract02-b.code  contract02-b.sol  contract03-a.abi.json  contract03-a.code  contract03-a.sol  contract03-b.abi.json  contract03-b.code  contract03-b.sol  contract04-a.abi.json  contract04-a.code  contract04-a.sol  contract04-b.abi.json  contract04-b.code  contract04-b.sol  contract05-a.abi.json  contract05-a.code  contract05-a.sol  contract05-b.abi.json  contract05-b.code  contract05-b.sol  contract06-a.abi.json  contract06-a.code  contract06-a.sol  contract06-b.abi.json  contract06-b.code  contract06-b.sol  contract06-c.code  contract06-c.sol  contract07-a.abi.json  contract07-a.code  contract07-b.code  contract07-b.sol  (+38 more)
