[package]
authors = [ 'TON DEV SOLUTIONS LTD <support@tonlabs.io>' ]
description = 'TVM Linker'
documentation = 'https://docs.ton.dev'
edition = '2021'
homepage = 'https://ton.dev'
keywords = [ 'TON', 'linker', 'TVM', 'tonlabs' ]
license-file = 'LICENSE.md'
name = 'tvm_linker'
readme = 'README.md'
repository = 'https://github.com/tonlabs/TVM-linker'
version = '0.20.6'

[[bin]]
name = 'tvm_linker'
path = 'src/main.rs'

[dependencies]
base64 = '0.13'
clap = '2.33'
crc = '3.0'
ed25519 = '2.2'
ed25519-dalek = '2.0'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.8'
regex = '1'
serde_json = '1.0'
sha2 = '0.10'
simplelog = '0.6'
serde = { features = [ 'derive' ], version = '1.0' }
ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.134' }
ton_block = { features = [ 'gosh' ], git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.92' }
ton_labs_assembler = { features = [ 'gosh' ], git = 'https://github.com/tonlabs/ever-assembler.git', tag = '1.2.132' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.20' }
ton_vm = { features = [ 'gosh' ], git = 'https://github.com/tonlabs/ever-vm.git', tag = '1.8.195' }

[dev-dependencies]
assert_cmd = '2.0.5'
predicates = '3.0.3'
rayon = '1.5.3'
similar = '2.2.0'

[lib]
name = 'ton_utils'
path = 'src/lib.rs'
test = false

