[package]
authors = [ 'TON DEV SOLUTIONS LTD <support@everx.dev>' ]
description = 'TVM Linker'
documentation = 'https://docs.ton.dev'
edition = '2021'
homepage = 'https://ton.dev'
keywords = [ 'TON', 'linker', 'TVM', 'everx-labs' ]
license-file = 'LICENSE.md'
name = 'tvm_linker'
readme = 'README.md'
repository = 'https://github.com/everx-labs/TVM-linker'
version = '0.21.2'

[[bin]]
name = 'tvm_linker'
path = 'src/main.rs'

[dependencies]
base64 = '0.13'
clap = '2.33'
crc = '3.0'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.8'
regex = '1'
serde = { features = [ 'derive' ], version = '1.0' }
serde_json = '1.0'
sha2 = '0.10'
simplelog = '0.6'
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.5.1' }
ever_assembler = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.5.3' }
ever_block = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-block.git', tag = '1.10.0' }
ever_vm = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.1.2' }

[dev-dependencies]
assert_cmd = '2.0.5'
predicates = '3.0.3'
rayon = '1.5.3'
similar = '2.2.0'

[lib]
name = 'ton_utils'
path = 'src/lib.rs'
test = false

