[package]
authors = [ 'EverX Labs Ltd <support@everx.dev>' ]
description = 'TVM Linker'
edition = '2021'
keywords = [ 'linker', 'TVM', 'everx-labs' ]
license-file = 'LICENSE.md'
name = 'tvm_linker'
readme = 'README.md'
repository = 'https://github.com/everx-labs/TVM-linker'
version = '0.21.5'

[[bin]]
name = 'tvm_linker'
path = 'src/main.rs'

[dependencies]
base64 = '0.13'
clap = '2.33'
crc = '3.0'
anyhow = '1.0'
thiserror = '1.0'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.8'
regex = '1'
serde = { features = [ 'derive' ], version = '1.0' }
serde_json = '1.0'
sha2 = '0.10'
simplelog = '0.6'

ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.6.4' }
ever_assembler = { git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.6.6' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.3' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.2.4' }

[dev-dependencies]
assert_cmd = '2.0.5'
predicates = '3.0.3'
rayon = '1.5.3'
similar = '2.2.0'
