[package]
name = "tonlabs-cli"
description = "console utility for TON"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
repository = "https://github.com/tonlabs/TVM-linker"
homepage = "https://ton.dev"
documentation = "https://docs.ton.dev"
build = "../tvm_linker/build/build.rs"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["TON", "SDK", "smart contract", "tonlabs"]
edition = "2018"
version = "0.2.0"

[dependencies]
base64 = "0.10.1"
clap = "2.32"
crc16 = "0.4.0"
ed25519-dalek = "^0.9.1"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.91"

ton-client-rs = "0.21.0"
ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git', default-features = false }
ton_client = { git = 'https://github.com/tonlabs/TON-SDK.git',  default_features = false, features = ["node_interaction"]}

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
