[package]
build = "build.rs"
name = "tvm_tools"
version = "0.13.83"

[dependencies]
ton_labs_assembler = { git = "https://github.com/tonlabs/ton-labs-assembler.git", tag = '1.2.25' }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git", tag = '1.10.11' }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git", tag = '1.8.20' }

clap = "2.32"
hex = "0.3.2"
log = "0.4.6"
zip = "0.5.3"
