[package]
build = "build/build.rs"
name = "tvm_linker"
description = "TVM linker"
version = "0.1.0"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
readme = "README.md"
license-file = "LICENSE.md"
homepage = "https://ton.dev"
repository = "https://github.com/tonlabs/TVM-linker"
documentation = "https://docs.ton.dev"
keywords = ["TON", "linker", "TVM", "tonlabs"]

[dependencies]
base64 = "0.10.1"
regex = "1"
clap = "2.32"
ed25519-dalek = "0.9.1"
hex = "0.3.2"
lazy_static = "1.3.0"
log = "0.4.6"
simplelog = "0.5.3"
rand = "0.6.5"
sha2 = "0.8.0"
serde_json = "1.0.40"
crc16 = "*"

ton_abi = { git = "https://github.com/tonlabs/TON-SDK.git" }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git", default-features = false }
