[package]
build = "build/build.rs"
name = "tvm_linker"
description = "TVM Linker"
version = "0.13.10"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
readme = "README.md"
license-file = "LICENSE.md"
homepage = "https://ton.dev"
repository = "https://github.com/tonlabs/TVM-linker"
documentation = "https://docs.ton.dev"
keywords = ["TON", "linker", "TVM", "tonlabs"]

[dependencies]
base64 = "0.10.0"
regex = "1"
clap = "2.32"
crc16 = "*"
ed25519 = "1.0.1"
ed25519-dalek = "1.0.0-pre.4"
hex = "0.3.2"
lazy_static = "1.1.0"
log = "0.4.6"
simplelog = "0.5.3"
rand = "0.7.3"
sha2 = "0.8.0"
serde = { version = "1.0.100", features = ["derive"]  }
serde_json = "1.0.41"
num = "^0.2"
num-traits = "^0.2.8"

ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_labs_assembler = { git = "https://github.com/tonlabs/ton-labs-assembler.git" }
ton_sdk = { git = "https://github.com/tonlabs/ton-sdk.git", default-features = false }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git", default-features = false }

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
